--- a/style.css
+++ b/style.css
@@ -15,9 +15,14 @@ body {
 
 /* Her arbejder vi på typografi                 */
 
-p {}
+p {
+    font-family: sans-serif;
+}
 
-h1 {}
+h1 {
+    font-size: 2.7vw;
+    font-family: 'roberto', sans-serif;
+}
 
 h2 {}
 
@@ -25,7 +30,7 @@ h2 {}
 /* Her arbejder vi på vores navigation         */
 
 #nav_top {
-    background-color: #00B9EA;
+    background-color: #f1f1f1;
     grid-column: 1/13;
     text-align: center;
 }
@@ -33,11 +38,11 @@ h2 {}
 /* Her arbejder vi på vores Call to action:    */
 
 footer {
-    position: fixed;
+    position:static;
     background-color: #E10E49;
     grid-column: 1/13;
     margin-top: 90vh;
-    z-index: 2;
+/*    z-index: 2;*/
 }
 
 #buy {
@@ -66,14 +71,15 @@ footer {
 /* Her arbejder vi på vores første sektion:    */
 
 #explainer {
-    background-color: ;
-    grid-column: 2/4;
+    background-color:;
+    grid-column: 2/7;
     margin-top: 10vh;
-    text-align: center;
+    justify-content: center;
+/*    text-align: center;*/
 }
 
 #information {
-    grid-column: 9/11;
+    grid-column: 8/12;
     margin-top: 10vh;
 }
 
@@ -82,10 +88,10 @@ footer {
 
 #billede_first {
     background-image: url(img/explainer.png);
-    background-size: 100%;
+    background-size: 78%;
     background-repeat: no-repeat;
     height: 40vh;
-    grid-column: 2/6;
+    grid-column: 2/7;
 }
 
 #kampagne_video {
@@ -95,11 +101,16 @@ footer {
 /*Her arbejder vi på tredje sektion          */
 
 #slut_tekst1 {
-    grid-column: 2/4;
+    grid-column: 2/7;
 }
 
 #slut_tekst2 {
-    grid-column: 9/11;
+    grid-column: 8/12;
+}
+
+#video {
+    width: 32vw;
+    height: 20vw;
 }
 
 /* Her arbejder jeg på media screens          */
