--- a/style.css
+++ b/style.css
@@ -35,6 +35,59 @@ h2 {}
     text-align: center;
 }
 
+/***** DROP DOWN ********/
+
+.dropbtn {
+    background-color: #f1f1f1;
+    color: rgba(200, 200, 200, 0.6);
+    padding: 14px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    font-family: 'Montserrat', sans-serif;
+    width: 100vw;
+    text-align: left;
+}
+
+/* Dropdown button on hover & focus */
+
+.dropdown-content a:hover,
+.dropdown-content a:focus {
+    color: #000000;
+    background-color: #f1f1f1;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #D5EDFA;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    padding: 12px 16px;
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: #C0576C;
+    padding: 25px 25px;
+    text-decoration: none;
+    display: block;
+    font-family: 'Montserrat', sans-serif;
+    color: rgba(200, 200, 200, 0.6);
+    font-size: 12px;
+
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+
 /* Her arbejder vi på vores Call to action:    */
 
 footer {
