--- a/style.css
+++ b/style.css
@@ -16,15 +16,19 @@ body {
 /* Her arbejder vi på typografi                 */
 
 p {
+    font-size: 1.5vw;
     font-family: sans-serif;
 }
 
 h1 {
-    font-size: 2.7vw;
+    font-size: 2.6vw;
     font-family: 'roberto', sans-serif;
 }
 
-h2 {}
+h2 {
+    font-size: 2vw;
+    font-family: 'roberto', sans-serif;
+}
 
 
 /* Her arbejder vi på vores navigation         */
@@ -33,6 +37,11 @@ h2 {}
     background-color: #f1f1f1;
     grid-column: 1/13;
     text-align: center;
+}
+
+#nav_top img {
+    width: 40vw;
+    height: auto;
 }
 
 /***** DROP DOWN ********/
@@ -123,13 +132,23 @@ footer {
 
 /* Her arbejder vi på vores første sektion:    */
 
+
 #explainer {
+    z-index: 1;
     background-color:;
     grid-column: 2/7;
     margin-top: 10vh;
     justify-content: center;
-/*    text-align: center;*/
 }
+
+#explainer img {
+    z-index: 3;
+    background-repeat: no-repeat;
+    height: 70vw;
+    grid-column: 1/8;
+}
+
+
 
 #information {
     grid-column: 8/12;
@@ -140,6 +159,7 @@ footer {
 /*Her arbejder vi på anden sektion           */
 
 #billede_first {
+    z-index: 2;
     background-image: url(img/explainer.png);
     background-size: 78%;
     background-repeat: no-repeat;
