--- a/style.css
+++ b/style.css
@@ -17,17 +17,17 @@ body {
 
 p {
     font-size: 1.5vw;
-    font-family: sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 h1 {
-    font-size: 2.6vw;
-    font-family: 'roberto', sans-serif;
+    font-size: 2.5vw;
+    font-family: 'Montserrat', sans-serif;
 }
 
 h2 {
     font-size: 2vw;
-    font-family: 'roberto', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 
