--- a/style.css
+++ b/style.css
@@ -104,7 +104,6 @@ footer {
     background-color: #E10E49;
     grid-column: 1/13;
     margin-top: 90vh;
-/*    z-index: 2;*/
 }
 
 #buy {
@@ -125,7 +124,7 @@ footer {
 }
 
 #buy:active {
-    background-color: #3e8e41;
+    background-color: #f1f1f1;
     box-shadow: 0 5px #666;
     transform: translateY(4px);
 }
