--- a/style.css
+++ b/style.css
@@ -39,14 +39,22 @@ h2 {
     text-align: center;
 }
 
-#nav_top img {
+.logo {
     width: 40vw;
     height: auto;
 }
 
+.haand {
+    grid-column: 2/3;
+    width: 10vw;
+}
+
+
+
 /***** DROP DOWN ********/
 
 .dropbtn {
+    grid-column: 2/4;
     background-color: #f1f1f1;
     color: rgba(5, 41, 81, 0.6);
     padding: 14px;
@@ -54,8 +62,8 @@ h2 {
     border: none;
     cursor: pointer;
     font-family: 'Montserrat', sans-serif;
-    width: 100vw;
-    text-align: left;
+/*    width: 100vw;*/
+/*    text-align: left;*/
 }
 
 /* Dropdown button on hover & focus */
@@ -77,7 +85,7 @@ h2 {
     background-color: #D5EDFA;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    padding: 12px 16px;
+    padding: 1px 1px;
     z-index: 1;
 }
 
@@ -96,40 +104,35 @@ h2 {
     display: block;
 }
 
+/*      HÆNDER       */
+
+
+#haender img {
+
+    align-content: center;
+    width: 33%;
+    height: auto;
+
+}
+
+
+
+
 
 /* Her arbejder vi på vores Call to action:    */
 
 footer {
-    position:static;
-    background-color: #E10E49;
-    grid-column: 1/13;
-    margin-top: 90vh;
+
+    display: grid;
+    grid-template-columns: (12, 1fr);
 }
 
-#buy {
-    grid-column: 4/6;
-    margin-left: 50vw;
-    /*         HJÆLP           */
-    font-size: 2vw;
-    background-color: #FCD900;
-    border-radius: 12px;
-    border: 2px solid #F2F2F2;
-
-
+#pic_1 {
+    grid-column: 1/12;
+    width: 99vw;
+    height: auto;
 
 }
-
-#buy:hover {
-    background-color: #00B9EA
-}
-
-#buy:active {
-    background-color: #f1f1f1;
-    box-shadow: 0 5px #666;
-    transform: translateY(4px);
-}
-
-/* Her arbejder vi på vores første sektion:    */
 
 
 #explainer {
@@ -167,7 +170,7 @@ footer {
 }
 
 #kampagne_video {
-    grid-column: 8/11;
+    grid-column: 8/13;
 }
 
 /*Her arbejder vi på tredje sektion          */
