--- a/style.css
+++ b/style.css
@@ -1,60 +1,184 @@
-/* Her arbejder vi på Body                      */
+* {
+    margin: 0;
+    padding: 0;
+}
+
+/*     TYPOGRAFI     */
 
 body {
     background-color: #D5EDFA;
 }
 
-/* Her arbejder vi på vores Grid                */
-
-#grid_container {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: auto;
-}
-
-
-/* Her arbejder vi på typografi                 */
-
 p {
     font-size: 1.5vw;
     font-family: 'Montserrat', sans-serif;
+    color: #052951;
 }
 
 h1 {
-    font-size: 2.5vw;
+    font-size: 2vw;
     font-family: 'Montserrat', sans-serif;
+    padding-bottom: 1vw;
+    color: #052951;
 }
 
 h2 {
     font-size: 2vw;
     font-family: 'Montserrat', sans-serif;
+    color: #052951;
 }
 
 
-/* Her arbejder vi på vores navigation         */
 
-#nav_top {
+/*      CSS GRID    */
+
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    grid-gap: 0px;
+}
+
+/*    MENU BAREN    */
+
+.title {
     background-color: #f1f1f1;
-    grid-column: 1/13;
+    grid-column: 1/12;
+    justify-self: center;
+    width: 100vw;
+    text-align: center;
+    color: #052951;
+
+}
+
+/*     HEADER     */
+
+.header {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    text-align: center;
+    background-color: #f1f1f1;
+    grid-column: 1/12;
+}
+
+
+.header .logo {
+    width: 40vw;
+    height: auto;
+    justify-self: center;
+}
+
+.header .overskrift {
+    grid-column: 1/4;
+}
+
+.header .haand {
+    grid-column: 1/2;
+    width: 10vw;
+
+}
+
+.header .konge {
+    justify-self: right;
+    width: 10vw;
+    transform: scaleX(-1)
+}
+
+/*     EXPLAINER    */
+
+.sidebar {
+    grid-column: 2/5;
+    padding-top: 4vw;
+    justify-self: center;
+    text-align: center;
+
+}
+
+.sidebar iframe {
+    width: 40vw;
+    height: 20vw;
+    padding: 0.4vw;
+}
+
+
+/*        TEKST OM YNDLINGS     */
+
+.content {
+    grid-column: 6/10;
+    padding-top: 4vw;
+}
+
+.sidebar_2 {
+    grid-column: 2/10;
+    padding-top: 4vw;
     text-align: center;
 }
 
-.logo {
+
+/*        VIDEO     */
+
+.content_2 {
+    grid-column: 2/5;
+    padding-top: 4vw;
+    justify-self: center;
+    text-align: center;
+}
+
+.content_2 iframe {
     width: 40vw;
+    height: 20vw;
+/*    padding: 0.3vw*/
+}
+
+#infographic {
+    grid-column: 6/12;
+    padding-top: 5vw;
+    width: 40vw;
+    height: 20vw;
+}
+
+
+
+/*         BUNDEN MED KORT     */
+
+
+.cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+
+    grid-column: 1/11;
+}
+
+.cards img {
+    width: 8vw;
+    justify-self: center;
+    padding-top: 4vw
+}
+
+/*      FOOTER      */
+
+.footer {
+    grid-column: 1/12;
+
+}
+
+#pic_1 {
+    width: 100vw;
     height: auto;
+
 }
 
-.haand {
-    grid-column: 2/3;
-    width: 10vw;
+/*
+.footer p {
+    font-size: 0.9vw;
+    text-align: center;
+    z-index: 1;
 }
-
-
+*/
 
 /***** DROP DOWN ********/
 
 .dropbtn {
-    grid-column: 2/4;
     background-color: #f1f1f1;
     color: rgba(5, 41, 81, 0.6);
     padding: 14px;
@@ -63,7 +187,7 @@ h2 {
     cursor: pointer;
     font-family: 'Montserrat', sans-serif;
 /*    width: 100vw;*/
-/*    text-align: left;*/
+/*    text-align: center;*/
 }
 
 /* Dropdown button on hover & focus */
@@ -83,20 +207,22 @@ h2 {
     display: none;
     position: absolute;
     background-color: #D5EDFA;
-    min-width: 160px;
+    min-width: 16px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     padding: 1px 1px;
     z-index: 1;
+
 }
 
 .dropdown-content a {
     color: #C0576C;
-    padding: 25px 25px;
+    padding: 15px 20px;
     text-decoration: none;
     display: block;
     font-family: 'Montserrat', sans-serif;
     color: rgba(5, 41, 81, 0.6);
     font-size: 12px;
+    text-align: center;
 
 }
 
@@ -104,165 +230,114 @@ h2 {
     display: block;
 }
 
-/*      HÆNDER       */
 
-
-#haender img {
-
-    align-content: center;
-    width: 33%;
-    height: auto;
-
-}
+/*         MEDIA@     */
 
 
 
+@media screen and (max-width: 450px) and (min-width: 300px){
 
+    .grid {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+    .title {
+        grid-column: 1/2;
+    }
 
-/* Her arbejder vi på vores Call to action:    */
+    .header {
+        grid-column: 1/2;
+    }
 
-footer {
+    .header .haand {
+        width: 20vw;
+    }
 
+    .header .konge {
+        width: 20vw;
+
+    }
+    .overskrift {
+        width: 100vw;
+    }
+    .sidebar {
+        grid-column: 1/2;
+        justify-self: center;
+    }
+
+    .sidebar h1 {
+        padding: 3vw;
+    }
+    .content {
+        grid-column: 1/2;
+    }
+
+    .content h1 {
+        padding: 3vw;
+    }
+
+    .sidebar iframe {
+        width: 80vw;
+        height: 40vw;
+        padding-top: 8vw;
+
+    }
+
+    p {
+        font-size: 1em;
+        text-align: center;
+        padding: 3vw;
+    }
+
+    h1 {
+        font-size: 1.5em;
+        text-align: center;
+
+    }
+    .content_2 {
+        grid-column: 1/2;
+        padding-top: 8vw;
+    }
+
+    .content_2 iframe {
+        width: 80vw;
+        height: 40vw;
+        padding-top: 8vw;
+    }
+
+    .sidebar_2 {
+        grid-column: 1/2;
+        padding-top: 8vw;
+    }
+
+    .sidebar_2 h1 {
+        padding: 10vw;
+    }
+    .cards {
+        grid-column: 1/2;
+        padding-top: 8vw;
+    }
+
+    #infographic {
+    grid-column: 1/2;
+    width: 80vw;
+    height: 40vw;
+    padding-top: 8vw;
+    justify-self: center;
+
+    }
+
+    .cards {
     display: grid;
-    grid-template-columns: (12, 1fr);
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+
+    grid-column: 1/11;
 }
 
-#pic_1 {
-    grid-column: 1/12;
-    width: 99vw;
-    height: auto;
+    .cards img {
+    width: 20vw;
+    justify-self: center;
+}
 
 }
 
-
-#explainer {
-    z-index: 1;
-    background-color:;
-    grid-column: 2/7;
-    margin-top: 10vh;
-    justify-content: center;
-}
-
-#explainer img {
-    z-index: 3;
-    background-repeat: no-repeat;
-    height: 70vw;
-    grid-column: 1/8;
-}
-
-
-
-#information {
-    grid-column: 8/12;
-    margin-top: 10vh;
-}
-
-
-/*Her arbejder vi på anden sektion           */
-
-#billede_first {
-    z-index: 2;
-    background-image: url(img/explainer.png);
-    background-size: 78%;
-    background-repeat: no-repeat;
-    height: 40vh;
-    grid-column: 2/7;
-}
-
-#kampagne_video {
-    grid-column: 8/13;
-}
-
-/*Her arbejder vi på tredje sektion          */
-
-#slut_tekst1 {
-    grid-column: 2/7;
-}
-
-#slut_tekst2 {
-    grid-column: 8/12;
-}
-
-#video {
-    width: 32vw;
-    height: 20vw;
-}
-
-/* Her arbejder jeg på media screens          */
-
-@media screen and (max-width: 450px) and (min-width: 300px) {
-    #grid_container {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        grid-gap: 10px;
-    }
-    #nav_top {
-        grid-column: 1/2;
-    }
-
-    #explainer {
-        grid-column: 1/2;
-    }
-    iframe {
-        width: 100vw;
-    }
-    #information {
-        grid-column: 1/2;
-    }
-    #billede_first {
-        grid-column: 1/2;
-    }
-    #kampagne_video {
-        grid-column: 1/2;
-    }
-
-    #slut_tekst1 {
-        grid-column: 1/2;
-    }
-    #slut_tekst2 {
-        grid-column: 1/2;
-    }
-}
-
-@media screen and (max-width: 720px) and (min-width: 420px) {
-    #grid_container {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        grid-gap: 10px;
-    }
-    #nav_top {
-        grid-column: 1/2;
-    }
-
-    #explainer {
-        grid-column: 1/2;
-    }
-    iframe {
-        width: 100vw;
-    }
-    #information {
-        grid-column: 1/2;
-    }
-}
-
-
-@media screen and (max-width: 1000px) and (min-width: 800px) {
-    #grid_container {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        grid-gap: 10px;
-    }
-    #nav_top {
-        grid-column: 1/2;
-    }
-
-    #explainer {
-        grid-column: 1/2;
-    }
-    iframe {
-        width: 100vw;
-    }
-    #information {
-        grid-column: 1/2;
-    }
-}
